[gd_scene load_steps=10 format=3 uid="uid://cl60lkhg1v8py"]

[ext_resource type="Script" path="res://Main/main.gd" id="1_cnpjh"]
[ext_resource type="PackedScene" uid="uid://ciyutv38xls8j" path="res://Mob/Mob.tscn" id="2_3dnpp"]
[ext_resource type="PackedScene" path="res://Interactables/Chest/Chest.tscn" id="3_avspb"]
[ext_resource type="PackedScene" uid="uid://rb5501g86i62" path="res://Player/Player.tscn" id="3_gotn6"]
[ext_resource type="Script" path="res://Mob/mob_timer.gd" id="4_pcupv"]
[ext_resource type="PackedScene" uid="uid://ckm00sq1hexvr" path="res://HUD/HUD.tscn" id="5_ukbjb"]
[ext_resource type="PackedScene" uid="uid://b0b4p6alavf6p" path="res://Backgrounds/Cursed_plains.tscn" id="6_t0uag"]
[ext_resource type="Script" path="res://Shaders/vermis_filter.gd" id="7_p80en"]

[sub_resource type="Curve2D" id="Curve2D_jkovw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1152, 0, 0, 0, 0, 0, 1153, 649, 0, 0, 0, 0, 0, 650, 0, 0, 0, 0, 1, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_cnpjh")
mob_scene = ExtResource("2_3dnpp")
chest_scene = ExtResource("3_avspb")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Player" parent="." instance=ExtResource("3_gotn6")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
script = ExtResource("4_pcupv")

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_jkovw")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(1, 0)

[node name="HUD" parent="." instance=ExtResource("5_ukbjb")]

[node name="CursedPlains" parent="." instance=ExtResource("6_t0uag")]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="VermisFilter" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1033.0
offset_bottom = -541.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("7_p80en")

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
